increased z-index for metadatasidebar to prevent it from being obstrcuted by navigator

--- a/src/components/MetaDataSidebar/MetaDataSidebar.css
+++ b/src/components/MetaDataSidebar/MetaDataSidebar.css
@@ -6,7 +6,7 @@
   top: 0px;
   bottom: 0px;
   width: 33vw;
-  z-index: 25;
+  z-index: 200;
   background-color: white;
   transition: transform 500ms ease-in-out;
 }
